--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -203,58 +203,58 @@
                 <!-------------------------------- All user tab ------------------------------------->
                 <div class="tab-pane fade show active p-3" id="nav-home" role="tabpanel"
                      aria-labelledby="nav-home-tab">
+                    <div>
+                        <div>
+                            <h5>All users</h5>
+                        </div>
+                        <div>
                             <div>
-                                <div>
-                                    <h5>All users</h5>
-                                </div>
-                                <div>
-                                    <div>
-                                        <table class="table table-striped bg-white">
-                                            <thead>
-                                            <tr>
-                                                <th>ID</th>
-                                                <th>First Name</th>
-                                                <th>Last Name</th>
-                                                <th>Age</th>
-                                                <th>Email</th>
-                                                <th>Role</th>
-                                                <th>Edit</th>
-                                                <th>Delete</th>
-                                            </tr>
-                                            </thead>
-                                            <tbody>
-                                            <tr th:each="user : ${allUsers}">
-                                                <td><p th:text="${user.getId()}"></p></td>
-                                                <td><a th:href="@{/admin/user(id=${user.getId()})}"
-                                                       th:text="| ${user.getFirstName()} |"></a></td>
-                                                <td><a th:href="@{/admin/user(id=${user.getId()})}"
-                                                       th:text="| ${user.getLastName()} |"></a></td>
-                                                <td><p th:text="${user.getAge()}"></p></td>
-                                                <td><p th:text="${user.getEmail()}"></p></td>
-                                                <td>
-                                      <!--<span th:each="role : ${user.authorities}"
-                                            th:text="${#strings.substring(role.getAuthority(), 5)} + ' '">
-                                      </span>-->
-                                                    <span th:each="role : ${user.roles}"
-                                                          th:text="${#strings.substring(role.roleName, 5)} + ' '"></span>
+                                <table class="table table-striped bg-white">
+                                    <thead>
+                                    <tr>
+                                        <th>ID</th>
+                                        <th>First Name</th>
+                                        <th>Last Name</th>
+                                        <th>Age</th>
+                                        <th>Email</th>
+                                        <th>Role</th>
+                                        <th>Edit</th>
+                                        <th>Delete</th>
+                                    </tr>
+                                    </thead>
+                                    <tbody>
+                                    <tr th:each="user : ${allUsers}">
+                                        <td><p th:text="${user.getId()}"></p></td>
+                                        <td><a th:href="@{/admin/user(id=${user.getId()})}"
+                                               th:text="| ${user.getFirstName()} |"></a></td>
+                                        <td><a th:href="@{/admin/user(id=${user.getId()})}"
+                                               th:text="| ${user.getLastName()} |"></a></td>
+                                        <td><p th:text="${user.getAge()}"></p></td>
+                                        <td><p th:text="${user.getEmail()}"></p></td>
+                                        <td>
+                                            <!--<span th:each="role : ${user.authorities}"
+                                                  th:text="${#strings.substring(role.getAuthority(), 5)} + ' '">
+                                            </span>-->
+                                            <span th:each="role : ${user.roles}"
+                                                  th:text="${#strings.substring(role.roleName, 5)} + ' '"></span>
 
-                                                </td>
+                                        </td>
 
-                                                <!-- Кнопки -->
-                                                <td>
-                                                    <a th:href="'#editUserPopup' + ${user.getId()}"
-                                                       class="btn btn-info">Edit</a>
-                                                </td>
-                                                <td>
-                                                    <a th:href="'#deleteUserPopup' + ${user.getId()}"
-                                                       class="btn btn-danger">Delete</a>
-                                                </td>
-                                            </tr>
-                                            </tbody>
-                                        </table>
-                                    </div>
-                                </div>
+                                        <!-- Кнопки -->
+                                        <td>
+                                            <a th:href="'#editUserPopup' + ${user.getId()}"
+                                               class="btn btn-info">Edit</a>
+                                        </td>
+                                        <td>
+                                            <a th:href="'#deleteUserPopup' + ${user.getId()}"
+                                               class="btn btn-danger">Delete</a>
+                                        </td>
+                                    </tr>
+                                    </tbody>
+                                </table>
                             </div>
+                        </div>
+                    </div>
                     <!------------------------Edit user popup------------------------>
                     <div th:each="user : ${allUsers}" th:id="'editUserPopup' + ${user.getId()}" class="popup">
                         <div class="d-flex justify-content-end">
@@ -322,8 +322,10 @@
                         <div class="d-flex justify-content-end">
                             <a class="link" href="#">×</a>
                         </div>
+
+
                         <h3>Delete user</h3>
-                        <form th:action="@{/admin/delete/{id}(id=${user.getId()})}" method="POST">
+                        <form th:action="@{'/admin/delete'}" method="GET">
                             <div class="form">
                                 <div class="form-group">
                                     <label for="firstName">ID</label>
@@ -369,7 +371,9 @@
                                 <div class="">
                                     <a class="btn btn-primary popup-btn mr-2" href="#">Close</a>
                                 </div>
-                                <button type="submit" class="btn btn-danger">Delete</button>
+                                <input type="hidden" name="id" th:value="${user.id}"/>
+                                <input type="submit" class="btn btn-danger" value="Delete">
+                                <!--<button type="submit" class="btn btn-danger">Delete</button>-->
                             </div>
                         </form>
                     </div>
@@ -379,7 +383,8 @@
                 <!-------------------------------- New user tab ------------------------------------->
                 <div class="tab-pane" id="nav-profile" role="tab" aria-labelledby="profile-tab">
                     <div class="header-title"><h5>Add new user</h5></div>
-                    <form id="myForm" th:action="@{/admin/add}" th:object="${user}" method="post" class="form-center">
+                    <form id="myForm" th:action="@{/admin/addNewUser}" th:object="${user}" method="post"
+                          class="form-center">
                         <div class="form-group">
                             <label for="firstName">First name</label>
                             <input type="text" class="form-control" id="firstName" name="firstName" required>
